# 056-flash-attention-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  data.py  example_usage.py  model.py  requirements.txt  strategy.py
rust/: Cargo.toml  README.md
rust/benches/: attention_benchmark.rs
rust/examples/: backtest.rs  fetch_data.rs  train.rs
rust/src/: lib.rs
rust/src/attention/: flash.rs  mod.rs  standard.rs
rust/src/model/: mod.rs  trading.rs  transformer.rs
rust/src/strategy/: backtest.rs  mod.rs  signals.rs
